crates/review-buddy/tests/snapshots/images__images_as_halfblocks_dusk_100x30.snap
---
source: crates/review-buddy/tests/images.rs
expression: text(& render(& mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                 Dusk
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ queue ───────────────────────────────────────────────────────────────────────────────────────────╮
│  Waiting on you · 2                                                                              │
│  ◐ Add a menu bar and keyboard-driven menus                                                   2h │
│  GH review-buddy#214 · ada · review requested                           ¶6   2 open   CI running │
│▌ ● Raise muted text contrast in the light theme                                               5h │
│▌ GH review-buddy#209 · jo · approved by you                ✓1  ✕1       ¶3                       │
│                                                                                                  │
│  Worth a look · 2                                                                                │
│  ✕ Cache pipeline status lookups                                                              7h │
│  GL flow!1182 · priya · you're mentioned                           ○1                 CI failing │
│  ● Tidy zsh startup                                                                           1d │
│  GH dotfiles#31 · smorris · yours                          ✓1      ○1   ¶5   2 open              │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ liminal-hq/review-buddy#209 ────────────────────────────────────────────────────────────────── ▼ ╮
│ Raise muted text contrast in the light theme                                                     │
│ jo wants jo/light-contrast → main                                                                │
│ +1 −1 · 1 file · opened 6d ago                                                                   │
│ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                                         │
│  Overview   Files 1   Checks 3   Conversation 0                                                  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────── │
│ Muted text dipped under 4.5:1 on the light surface. This raises the floor and adds a regression  │
│ test.                                                                                            │
│ ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄                                                                         │
│ ▄▀▀▀▀▀▀▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄                                                                         │
│  ▄▄▄▄▄▄▄▄▄▄                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
